<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/fondo" />

    <TextView
        android:id="@+id/titulo"
        style="@style/textoAmarilloCiudad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/mis_tareas"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitulo"
        style="@style/textoAmarilloCiudad"
        android:layout_below="@id/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/label2"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/cajaLogin"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/gradient_white"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/logoLogin"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:fontFamily="@font/batman"
            android:text="l"
            android:textAlignment="center"
            android:textColor="@color/negroGradiente"
            android:textSize="50sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:backgroundTint="#f49a05"
            android:hint="@string/nombre"
            android:minHeight="48dp"
            android:textColor="@color/amarilloOscuro"
            android:textColorHint="@color/amarilloOscuro">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/psw"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:backgroundTint="@color/amarilloOscuro"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/amarilloOscuro"
            android:textColorHint="@color/amarilloOscuro" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton"
            android:drawableTop="@drawable/ic_batman"
            android:text="@string/login"
            android:textColor="@color/negroGradiente"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cajaLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/grisredondo">

        <TextView
            android:id="@+id/newAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/newAccountLogo"
            android:drawablePadding="15dp"
            android:fontFamily="@font/cityscape"
            android:onClick="crearCuenta"
            android:padding="6dp"
            android:text="@string/create_a_new_account"
            android:textColor="@color/amarilloOscuro"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/newAccountLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/new_account" />
    </LinearLayout>
</RelativeLayout>